  - Fix packaging of stand alone sets. BZ #689347
  - Update docbook-style-xsl req to 1.76.1 for epub change. BZ #697382
  - Switch normal output to STDOUT, added croak call. BZ #688447
  - Added mainfile parameter. BZ #688585
  - Split pod from publican command to allow auto-generation.
  - Update BZ links to point to Publican component.
  - Add rename action. BZ #694698

2.5  Fri Dec 02 2010 
  - Use SPEC_VERSION for splash page spec files
  - Force removal of old packages

2.4  Thu Dec 02 2010 
  - Add de.po to MANIFEST
  - Add menu hide option. BZ #650037
  - Only set title attribute in HTMl if alt text is set. BZ #651247
  - Changed tabs to spaces in the specfile xsl BZ #652120
  - Fix broken version splash page icon. BZ #647360
  - Add web_formats option. BZ #647360
  - Add Lohit Devanagari to Marathi font list. BZ #654554
  - Stop publican setting imagedata format. BZ #654939
  - Fix DocBook 5 DTD string format change. BZ #655621
  - Add dt_requires and menu_category options. BZ #647352
  - Remove web PDF from Indic + ar-SA,fa-IR,he-IL. BZ #655713
  - Fix publish breaking UTF8 file names. BZ #648126
  - Fix non-en lang breaking website strings. BZ #656139
  - Fix IE8 javascript and layout issues. BZ #656531
  - Remove Red elements from interactive.css. BZ #650950
  - Added support for home page site_overrides.css file.  BZ #650950
  - Add check for outdated SRPMS.

2.3  Tue Oct 26 2010 
  - Prepend product name to product/version splash pages.
  - Fix bash completion for --brand and --type.
  - Use --nocolours in spec files.
  - Update tocs when home/product/version pages are updated. BZ #612027
  - Scroll to current entry in navigation menu.
  - Highlight current book in navigation menu.
  - Fix single quote in abstract/subtitle breaking RPM install. BZ #642088
  - Fix RPM website not installing cleanly.
  - Fix splash page icon wrap. BZ #642109
  - Moved titles before: example, equation, table. BZ #638787