@@ -39,6 +39,7 @@
   - Split pod from publican command to allow auto-generation.
   - Update BZ links to point to Publican component.
   - Add rename action. BZ #694698
+  - Added detection of mixed_mode tags to XmlClean. BZ #688286
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
